...
            android:layout_marginEnd="10dp"
            android:theme="@style/checkboxBlueBackground"
            android:visibility="gone"
            tools:visibility="visible"/>

        <EditText
            android:id="@+id/task_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_activity_hint"
            android:textColorHint="@color/hint_text"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
...
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/progress_layout">

        <RelativeLayout
            android:id="@+id/scrollable_relative_laytout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/task_goal_layout"
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:onClick="goalOnClick"
...
                    android:text="@string/goal_string"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/task_goal_image"/>
                <TextView
                    android:id="@+id/task_goal_value"
                    android:layout_width="match_parent"
                    tools:text="@string/goal_string"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/task_goal_image"
                    android:layout_below="@+id/task_goal_title" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/task_deadline_layout"
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_below="@id/task_goal_layout"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
...
                    android:layout_marginStart="5dp"
                    android:text="@string/deadline_string"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/task_deadline_image"/>
                <TextView
                    android:id="@+id/task_deadline_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_below="@+id/task_deadline_title"
                    android:layout_toEndOf="@+id/task_deadline_image"
                    tools:text="@string/sample_deadline_string"/>
...
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/task_priority_image"/>

                <Spinner
                    android:id="@+id/task_priority_spinner"
                    android:layout_below="@+id/task_priority_title"
                    android:layout_width="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/task_priority_image"
                    android:layout_height="25dp"
                    android:entries="@array/Priorities"
                    android:prompt="@string/priority_spinner_title"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/task_timespent_layout"
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:onClick="timeSpentOnClick"
...
