...
    </string-array>

    <!-- Log strings-->

    <!-- Button strings-->
    <string name="dialog_done">Done</string>
    <string name="dialog_ok" translatable="false">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_hour_string">00</string>
    <string name="activity_string">Activity</string>
    <string name="goal_string">Goal</string>

    <!-- Settings strings-->
...
